--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -2,6 +2,8 @@
   display: block;
   margin-left: auto;
   margin-right: auto;
+  padding-left: 3em;
+  padding-right: 3em;
   min-width: 1000px;
   width: auto;
   max-width: 1300px;
@@ -73,7 +75,7 @@ img.cup {
   font-weight: 600;
 
   width: 15em;
-  padding-left: 3em;
+  //padding-left: 3em;
   
 }
 
