--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -2,6 +2,10 @@ body {
   background-color: #E6E6FA;
   font-family: 'Courier New', Courier, monospace;
   height: 95vh;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 4em;
+  padding-right: 4em;
 }
 
 .img {
